# final-nn

./: 1-autoencoder.ipynb  2-classifier.ipynb  README.md  pyproject.toml
.github/workflows/: main.yml
nn/: __init__.py  nn.py  preprocess.py
test/: test_nn.py
